--- a/TrackCoach/Base.lproj/Main.storyboard
+++ b/TrackCoach/Base.lproj/Main.storyboard
@@ -261,7 +261,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RRT-PK-YGB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1394" y="422"/>
+            <point key="canvasLocation" x="1394" y="632"/>
         </scene>
         <!--Tutorial2 View Controller-->
         <scene sceneID="Q3c-x9-iqI">
@@ -329,7 +329,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Csa-Q1-wh7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1870" y="414"/>
+            <point key="canvasLocation" x="1864" y="632"/>
         </scene>
         <!--App Info View Controller-->
         <scene sceneID="kuD-JF-jMn">
@@ -340,17 +340,52 @@
                         <viewControllerLayoutGuide type="bottom" id="XYK-oi-Wlr"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="S7T-kg-ov0">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="700"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rkb-C6-eLL" userLabel="Title View">
+                                <rect key="frame" x="0.0" y="20" width="600" height="53"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4w-Uj-PzT">
+                                        <rect key="frame" x="229" y="16" width="143" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeK-la-zEP">
+                                        <rect key="frame" x="20" y="12" width="40" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="Hl2-LM-yl7"/>
+                                            <constraint firstAttribute="height" constant="30" id="mDV-ct-wpd"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" title="Back">
+                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="back:" destination="1XP-Fe-ht0" eventType="touchUpInside" id="tTD-vd-CjL"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="h4w-Uj-PzT" firstAttribute="centerY" secondItem="zeK-la-zEP" secondAttribute="centerY" id="2jC-Rv-DqH"/>
+                                    <constraint firstAttribute="height" constant="53" id="54t-r4-XFe"/>
+                                    <constraint firstItem="h4w-Uj-PzT" firstAttribute="top" secondItem="Rkb-C6-eLL" secondAttribute="top" constant="16" id="DS7-Ko-nqJ"/>
+                                    <constraint firstItem="zeK-la-zEP" firstAttribute="leading" secondItem="Rkb-C6-eLL" secondAttribute="leading" constant="20" id="KNT-9k-qYr"/>
+                                    <constraint firstAttribute="centerY" secondItem="h4w-Uj-PzT" secondAttribute="centerY" id="kJl-Mf-jsT"/>
+                                    <constraint firstAttribute="centerX" secondItem="h4w-Uj-PzT" secondAttribute="centerX" id="lgN-is-uNB"/>
+                                </constraints>
+                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l1k-H9-XFT">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="700"/>
+                                <rect key="frame" x="0.0" y="73" width="600" height="927"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFB-D5-Fdg" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="700"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PbV-SZ-Ayb">
-                                                <rect key="frame" x="248" y="351" width="104" height="36"/>
+                                                <rect key="frame" x="248" y="295" width="104" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Contact Me">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -360,13 +395,13 @@
                                                 </connections>
                                             </button>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="With TrackCoach, you can simply time races, and easily share them!" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eai-uI-LuV">
-                                                <rect key="frame" x="106" y="61" width="484" height="65"/>
+                                                <rect key="frame" x="106" y="22" width="484" height="33"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vPF-60-vEQ">
-                                                <rect key="frame" x="10" y="132" width="580" height="150"/>
+                                                <rect key="frame" x="10" y="76" width="580" height="150"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" priority="250" constant="150" id="npF-3j-ceA"/>
@@ -381,27 +416,6 @@ More features on the way!
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zeK-la-zEP">
-                                                <rect key="frame" x="20" y="16" width="40" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="40" id="Hl2-LM-yl7"/>
-                                                    <constraint firstAttribute="height" constant="30" id="mDV-ct-wpd"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                <state key="normal" title="Back">
-                                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="back:" destination="1XP-Fe-ht0" eventType="touchUpInside" id="oi9-K2-2jG"/>
-                                                </connections>
-                                            </button>
-                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About TrackCoach" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h4w-Uj-PzT">
-                                                <rect key="frame" x="229" y="20" width="143" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright Notice" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="hsx-3j-I5c">
                                                 <rect key="frame" x="245" y="663" width="110" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -415,7 +429,7 @@ More features on the way!
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="4M9-6W-Ot6">
-                                                <rect key="frame" x="10" y="56" width="76" height="76"/>
+                                                <rect key="frame" x="10" y="0.0" width="76" height="76"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="76" id="nCd-xn-5HR"/>
                                                     <constraint firstAttribute="height" constant="76" id="nl7-t8-htU"/>
@@ -424,7 +438,6 @@ More features on the way!
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="h4w-Uj-PzT" firstAttribute="top" secondItem="hFB-D5-Fdg" secondAttribute="top" constant="20" id="0h6-WW-e5Z"/>
                                             <constraint firstItem="vPF-60-vEQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="eai-uI-LuV" secondAttribute="bottom" id="3sj-zA-VrT"/>
                                             <constraint firstItem="eai-uI-LuV" firstAttribute="leading" secondItem="4M9-6W-Ot6" secondAttribute="trailing" constant="20" id="65T-FP-1WQ"/>
                                             <constraint firstAttribute="trailing" secondItem="eai-uI-LuV" secondAttribute="trailing" constant="10" id="6CI-jk-cTD"/>
@@ -434,13 +447,8 @@ More features on the way!
                                             <constraint firstItem="hsx-3j-I5c" firstAttribute="top" secondItem="A0B-hu-eQ1" secondAttribute="bottom" constant="8" id="EAE-vX-v0K"/>
                                             <constraint firstAttribute="width" constant="600" id="Fq1-gl-B1Q"/>
                                             <constraint firstAttribute="centerX" secondItem="PbV-SZ-Ayb" secondAttribute="centerX" id="J2Z-xJ-B3x"/>
-                                            <constraint firstItem="eai-uI-LuV" firstAttribute="top" secondItem="h4w-Uj-PzT" secondAttribute="bottom" constant="20" id="J56-mU-XoF"/>
-                                            <constraint firstItem="zeK-la-zEP" firstAttribute="leading" secondItem="hFB-D5-Fdg" secondAttribute="leading" constant="20" id="LrG-dC-GNG"/>
                                             <constraint firstItem="vPF-60-vEQ" firstAttribute="top" secondItem="4M9-6W-Ot6" secondAttribute="bottom" priority="250" id="Qzy-wx-ZaR"/>
-                                            <constraint firstAttribute="centerX" secondItem="h4w-Uj-PzT" secondAttribute="centerX" id="SLo-ub-Mct"/>
-                                            <constraint firstItem="4M9-6W-Ot6" firstAttribute="top" relation="greaterThanOrEqual" secondItem="zeK-la-zEP" secondAttribute="bottom" constant="10" id="Tjv-ox-G6G"/>
-                                            <constraint firstItem="h4w-Uj-PzT" firstAttribute="centerY" secondItem="zeK-la-zEP" secondAttribute="centerY" id="UwG-OR-rKy"/>
-                                            <constraint firstItem="h4w-Uj-PzT" firstAttribute="top" relation="greaterThanOrEqual" secondItem="hFB-D5-Fdg" secondAttribute="top" constant="20" id="Wn6-3i-ik4"/>
+                                            <constraint firstItem="4M9-6W-Ot6" firstAttribute="top" secondItem="hFB-D5-Fdg" secondAttribute="top" id="ZhI-je-rUK"/>
                                             <constraint firstAttribute="bottom" secondItem="hsx-3j-I5c" secondAttribute="bottom" constant="20" id="Zub-k1-6ZU"/>
                                             <constraint firstAttribute="height" priority="250" constant="700" id="cR9-4F-T0l"/>
                                             <constraint firstItem="PbV-SZ-Ayb" firstAttribute="top" secondItem="vPF-60-vEQ" secondAttribute="bottom" constant="69" id="eWv-Lf-rKH"/>
@@ -463,18 +471,21 @@ More features on the way!
                         <constraints>
                             <constraint firstAttribute="bottomMargin" secondItem="l1k-H9-XFT" secondAttribute="bottom" id="DKz-bs-7Ix"/>
                             <constraint firstItem="l1k-H9-XFT" firstAttribute="leading" secondItem="S7T-kg-ov0" secondAttribute="leadingMargin" constant="-16" id="H2L-oY-ehw"/>
+                            <constraint firstItem="Rkb-C6-eLL" firstAttribute="top" secondItem="PKK-Jg-Ixs" secondAttribute="bottom" id="Jis-yW-w3i"/>
                             <constraint firstAttribute="trailingMargin" secondItem="l1k-H9-XFT" secondAttribute="trailing" constant="-16" id="TyI-ft-wvF"/>
-                            <constraint firstItem="l1k-H9-XFT" firstAttribute="top" secondItem="S7T-kg-ov0" secondAttribute="topMargin" id="isV-Br-A95"/>
+                            <constraint firstItem="l1k-H9-XFT" firstAttribute="top" secondItem="Rkb-C6-eLL" secondAttribute="bottom" id="Yr1-rz-RBs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Rkb-C6-eLL" secondAttribute="trailing" constant="-16" id="e9e-nN-4zZ"/>
+                            <constraint firstItem="Rkb-C6-eLL" firstAttribute="leading" secondItem="S7T-kg-ov0" secondAttribute="leadingMargin" constant="-16" id="x52-ZN-eT6"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="HIE-KG-TPd"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="600" height="700"/>
+                    <size key="freeformSize" width="600" height="1000"/>
                     <connections>
                         <outlet property="contactButton" destination="PbV-SZ-Ayb" id="Vge-Iq-bvQ"/>
-                        <outlet property="content" destination="hFB-D5-Fdg" id="DXq-4n-BRm"/>
+                        <outlet property="contentWidth" destination="Fq1-gl-B1Q" id="rOy-b7-m2B"/>
                         <outlet property="copyrightNoticeLabel" destination="hsx-3j-I5c" id="Gtj-MB-lE3"/>
                         <outlet property="mainTextView" destination="vPF-60-vEQ" id="GCZ-ST-9oM"/>
                         <outlet property="topTextView" destination="eai-uI-LuV" id="jh8-3w-Hau"/>
@@ -483,7 +494,7 @@ More features on the way!
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EBF-Wd-1X9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1399" y="-291"/>
+            <point key="canvasLocation" x="1549" y="-323"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2aa-JE-Q3C">
@@ -502,7 +513,7 @@ More features on the way!
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bR9-EW-0wf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="882" y="-291"/>
+            <point key="canvasLocation" x="784" y="-298"/>
         </scene>
         <!--Tutorial3 View Controller-->
         <scene sceneID="Ufb-hu-rAK">
